Display a photo for each recipe

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -6,7 +6,8 @@
     <title>Pizza Recipe</title>
 </head>
 <body>
-    <h1>Pizza</h1>
     <a href="../index.html">Home</a>
+    <h1>Pizza</h1>
+    <img src="../images/pizza.jpg" width="500">
 </body>
 </html>
