--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -6,7 +6,8 @@
     <title>Sourdough Recipe</title>
 </head>
 <body>
-    <h1>Sourdough</h1>
     <a href="../index.html">Home</a>
+    <h1>Sourdough</h1>
+    <img src="../images/sourdough.jpg" width="500">
 </body>
 </html>
