--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,8 @@
     <title>Lasagna Recipe</title>
 </head>
 <body>
-    <h1>Lasagna</h1>
     <a href="../index.html">Home</a>
+    <h1>Lasagna</h1>
+    <img src="../images/lasagna.jpg" width="500">
 </body>
 </html>
