Display recipe description, ingredients, and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,5 +9,23 @@
     <a href="../index.html">Home</a>
     <h1>Lasagna</h1>
     <img src="../images/lasagna.jpg" width="500">
+
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nesciunt modi quis incidunt autem hic, 
+    eveniet ab perspiciatis officiis cupiditate nisi, quam eius dolore velit qui. Dolores odit alias a?</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Noodles</li>
+        <li>Tomato Sauce</li>
+        <li>Cheese</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Layer the noodles</li>
+        <li>Add the sauce</li>
+        <li>Bake for 35 minutes</li>
+    </ol>
 </body>
 </html>
