--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -9,5 +9,25 @@
     <a href="../index.html">Home</a>
     <h1>Pizza</h1>
     <img src="../images/pizza.jpg" width="500">
+
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nesciunt modi quis incidunt autem hic, 
+    eveniet ab perspiciatis officiis cupiditate nisi, quam eius dolore velit qui. Dolores odit alias a?</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Dough</li>
+        <li>Tomato Sauce</li>
+        <li>Cheese</li>
+        <li>Pepperoni</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Roll out the dough</li>
+        <li>Spread the tomato sauce on top</li>
+        <li>Add cheese and pepperoni</li>
+        <li>Bake for 15 minutes</li>
+    </ol>
 </body>
 </html>
