--- a/recipes/sourdough.html
+++ b/recipes/sourdough.html
@@ -9,5 +9,23 @@
     <a href="../index.html">Home</a>
     <h1>Sourdough</h1>
     <img src="../images/sourdough.jpg" width="500">
+
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod, nesciunt modi quis incidunt autem hic, 
+    eveniet ab perspiciatis officiis cupiditate nisi, quam eius dolore velit qui. Dolores odit alias a?</p>
+    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Flour</li>
+        <li>Water</li>
+        <li>Salt</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Mix all ingredients in a bowl</li>
+        <li>Knead and shape the dough</li>
+        <li>Bake for 45 minutes</li>
+    </ol>
 </body>
 </html>
